// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli 1`] = `
"💬  
    [37m[90m 1[37m {[39m
    [37m[90m 2[37m   [33mpackageJson:[37m {[39m
    [37m[90m 3[37m     [33mname:[37m [33m'@ianwalter/cli'[37m[39m
    [37m[90m 4[37m   },[39m
    [37m[90m 5[37m   [33mlevel:[37m [33m'debug'[37m,[39m
    [37m[90m 6[37m   [33mconcurrency:[37m [32m4[37m,[39m
    [37m[90m 7[37m   [33msome:[37m {[39m
    [37m[90m 8[37m     [33mthing:[37m [35mtrue[37m,[39m
    [37m[90m 9[37m     [33mother:[37m {[39m
    [37m[90m10[37m       [33mthing:[37m [33m'a'[37m[39m
    [37m[90m11[37m     }[39m
    [37m[90m12[37m   },[39m
    [37m[90m13[37m   [33m_:[37m [],[39m
    [37m[90m14[37m   [33mc:[37m [32m4[37m[39m
    [37m[90m15[37m }[39m
    [37m[39m"
`;

exports[`dot format 1`] = `
"💬  
    [37m[90m 1[37m {[39m
    [37m[90m 2[37m   [33mpackageJson:[37m {[39m
    [37m[90m 3[37m     [33mname:[37m [33m'@ianwalter/cli'[37m[39m
    [37m[90m 4[37m   },[39m
    [37m[90m 5[37m   [33mlevel:[37m [33m'debug'[37m,[39m
    [37m[90m 6[37m   [33mconcurrency:[37m [32m2[37m,[39m
    [37m[90m 7[37m   [33msome:[37m {[39m
    [37m[90m 8[37m     [33mthing:[37m [35mtrue[37m,[39m
    [37m[90m 9[37m     [33mother:[37m {[39m
    [37m[90m10[37m       [33mthing:[37m [33m'b'[37m[39m
    [37m[90m11[37m     }[39m
    [37m[90m12[37m   },[39m
    [37m[90m13[37m   [33m_:[37m [],[39m
    [37m[90m14[37m   [33mc:[37m [32m2[37m[39m
    [37m[90m15[37m }[39m
    [37m[39m"
`;
